appId: com.rim.reservation
---
- launchApp

- tapOn:
    id: input-username
- inputText: testuser

- tapOn:
    id: input-email
- inputText: test@example.com

- tapOn:
    id: input-password
- inputText: testpassword

- tapOn:
    id: button-signup

- extendedWaitUntil:
    visible:
      id: link-signin
    timeout: 5000

- tapOn:
    id: link-signin

- extendedWaitUntil:
    visible:
      id: login-title
    timeout: 5000
